--- a/css/common.css
+++ b/css/common.css
@@ -19,3 +19,152 @@ h2 a{ text-decoration:none; color:#f35305;}
 {
     clear: both;
 }
+
+@font-face {font-family: 'iconfont';
+    src: url(../iconfont/iconfont.eot); /* IE9*/
+    src: url(../iconfont/iconfont.eot) format('embedded-opentype'), /* IE6-IE8 */
+    url(../iconfont/iconfont.woff) format('woff'), /* chrome、firefox */
+    url(../iconfont/iconfont.ttf) format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url(../iconfont/iconfont.svg) format('svg'); /* iOS 4.1- */
+}
+
+.iconfont{
+    font-family:"iconfont" !important;
+    font-size:16px;
+    font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+/*头部banner*/
+.top{
+    width:100%; 
+    height:60px; 
+    min-width:1200px;
+}
+
+.top a{
+    display:block; 
+    width:100%; 
+    height:100%;
+}
+
+/*头部导航*/
+.topnav_wrap{
+    width: 100%; 
+    background:#f5f5f5;
+    height: 30px;
+}
+
+.topnav{
+    width:1200px; 
+    margin:0 auto;
+}
+
+.topnav ul li{
+    float: left; 
+    line-height:30px; 
+    text-align: center;
+}
+
+.topnav ul .pipe{
+    margin: 0 5px;
+}
+
+.topnav ul li a{
+    margin: 0 5px;
+}
+
+.topnav ul li span{ 
+    display:inline-block; 
+    background:url(..//images/icon.png) no-repeat;
+}
+
+/*二级菜单*/
+.nav-multi-menu>a{
+    display: block; 
+    position: relative; 
+    z-index: 10001; 
+    width: 100%; 
+    border: 1px solid transparent; 
+    border-bottom: none;
+}
+
+.nav-multi-menu>.a_hover{ 
+    background: #fff; 
+    border-color: #ddd;
+}
+
+.topnav ul li .multi-menu{ 
+    position: absolute; 
+    z-index: 1000; 
+    background: #fff; 
+    border: 1px solid #ddd; 
+    margin-top: -2px; 
+    margin-left: 5px; 
+    display: none;
+}
+
+.topnav ul li .multi-menu li{
+    display: block;
+    float: none; 
+    padding: 0 6px;
+}
+
+
+/*左边菜单*/
+.topnav .topnav_l{
+    float:left;
+}
+
+.topnav .topnav_l li .icon_dropdown{ 
+    width:5px; 
+    height:3px; 
+    background-position:-60px -25px; 
+    vertical-align:2px;
+    margin-left:5px; 
+}
+
+/*右边菜单*/
+.topnav .topnav_r{
+    float:right;
+}
+
+.topnav .topnav_r li .weibo{
+    width:23px; 
+    height:18px; 
+    background-position:0 -25px; 
+    margin-right:3px; 
+    vertical-align:-4px;
+} 
+
+.topnav .topnav_r li .weixin-icon{
+    width:24px; 
+    height:19px; 
+    background-position:-30px -25px; 
+    margin-right:3px; 
+    vertical-align:-4px;
+} 
+
+/*微信二维码*/
+.topnav_weixin{ 
+    position: relative;
+}
+
+.topnav_weixin_qrcode{ 
+    background:url(..//images/weixin.jpg) no-repeat; 
+    position: absolute; 
+    top:30px; 
+    left: 0; 
+    z-index: 1000;
+    width: 105px;
+    height: 105px;
+    overflow: hidden;
+    -webkit-box-shadow:0 2px 8px 1px rgba(0,0,0,0.2);
+    -moz-box-shadow:0 2px 8px 1px rgba(0,0,0,0.2);
+    -o-box-shadow:0 2px 8px 1px rgba(0,0,0,0.2);
+    box-shadow:0 2px 8px 1px rgba(0,0,0,0.2);
+    display: none;
+} 
+
