--- a/css/index.css
+++ b/css/index.css
@@ -1,132 +1,3 @@
-/*头部banner*/
-.top{
-	width:100%; 
-	height:60px; 
-	min-width:1200px;
-}
-
-.top a{
-	display:block; 
-	width:100%; 
-	height:100%;
-}
-
-/*头部导航*/
-.topnav_wrap{
-	width: 100%; 
-	background:#f5f5f5;
-	height: 30px;
-}
-
-.topnav{
-	width:1200px; 
-	margin:0 auto;
-}
-
-.topnav ul li{
-	float: left; 
-	line-height:30px; 
-	text-align: center;
-}
-
-.topnav ul .pipe{
-	margin: 0 5px;
-}
-
-.topnav ul li a{
-	margin: 0 5px;
-}
-
-.topnav ul li span{ 
-	display:inline-block; 
-	background:url(..//images/icon.png) no-repeat;
-}
-
-/*二级菜单*/
-.nav-multi-menu>a{
-	display: block; 
-	position: relative; 
-	z-index: 10001; 
-	width: 100%; 
-	border: 1px solid transparent; 
-	border-bottom: none;
-}
-
-.nav-multi-menu>.a_hover{ 
-	background: #fff; 
-	border-color: #ddd;
-}
-
-.topnav ul li .multi-menu{ 
-	position: absolute; 
-	z-index: 1000; 
-	background: #fff; 
-	border: 1px solid #ddd; 
-	margin-top: -2px; 
-	margin-left: 5px; 
-	display: none;
-}
-
-.topnav ul li .multi-menu li{
-	float: none; 
-	padding: 0 6px;
-}
-
-/*左边菜单*/
-.topnav .topnav_l{
-	float:left;
-}
-
-.topnav .topnav_l li .icon_dropdown{ 
-	width:5px; 
-	height:3px; 
-	background-position:-60px -25px; 
-	vertical-align:2px;
-	margin-left:5px; 
-}
-
-/*右边菜单*/
-.topnav .topnav_r{
-	float:right;
-}
-
-.topnav .topnav_r li .weibo{
-	width:23px; 
-	height:18px; 
-	background-position:0 -25px; 
-	margin-right:3px; 
-	vertical-align:-4px;
-} 
-
-.topnav .topnav_r li .weixin-icon{
-	width:24px; 
-	height:19px; 
-	background-position:-30px -25px; 
-	margin-right:3px; 
-	vertical-align:-4px;
-} 
-
-/*微信二维码*/
-.topnav_weixin{ 
-	position: relative;
-}
-
-.topnav_weixin_qrcode{ 
-	background:url(..//images/weixin.jpg) no-repeat; 
-	position: absolute; 
-	top:30px; 
-	left: 0; 
-	z-index: 1000;
-	width: 105px;
-	height: 105px;
-	overflow: hidden;
-	-webkit-box-shadow:0 2px 8px 1px rgba(0,0,0,0.2);
-	-moz-box-shadow:0 2px 8px 1px rgba(0,0,0,0.2);
-	-o-box-shadow:0 2px 8px 1px rgba(0,0,0,0.2);
-	box-shadow:0 2px 8px 1px rgba(0,0,0,0.2);
-	display: none;
-} 
-
 /*头部*/
 .header{
 	clear: both; 
@@ -332,6 +203,7 @@
 	height: 380px;
 }
 
+/*promo*/
 .promo{
 	position: relative; 
 	overflow: hidden;
@@ -353,8 +225,8 @@
 }
 
 .promo .promo-main .promo-panel img{ 
-	width: 100%; 
-	height: 100%;
+	max-width: 100%; 
+	max-height: 100%;
 }
 
 .promo .promo-extra .promo-nav{
@@ -705,9 +577,48 @@
 
 
 /*侧栏－联系方式*/
-.side_contact{
+.elevator{
 	width:54px; 
 	position:fixed; 
-	right:10px; 
+	right:15px; 
 	bottom:100px;
+}
+
+.elevator a {
+	display: block;
+	width: 54px;
+	height: 54px;
+	color: #787d82;
+	text-align: center;
+	line-height: 54px;
+	border: 1px solid #ececec;
+	background: #fff;
+}
+
+.elevator a:hover{
+	color: #f35305;
+}
+
+.elevator .iconfont{
+	font-size: 25px;
+}
+
+.elevator .elevator-msg .iconfont:before{ content: "\e603" }
+.elevator .elevator-weibo .iconfont:before{ content: "\e601" }
+.elevator .elevator-weixin .iconfont:before{ content: "\e600" }
+.elevator .elevator-top .iconfont:before{ content: "\e602" }
+
+.elevator .elevator-weixin{
+	position: relative;
+}
+
+.elevator .elevator-weixin-box{
+	position: absolute;
+	top: 0;
+	right: 60px;
+	width: 105px;
+	height: 105px;
+	background: url(../images/weixin.jpg) no-repeat center center #fff;
+	box-shadow: 0 2px 8px 1px rgba(0,0,0,0.2);
+	display: none;
 }
