--- a/css/order.css
+++ b/css/order.css
@@ -1,11 +1,30 @@
 .topnav{
     width: 980px;
 }
+
 /*头部*/
-.header{width:980px; margin:0 auto; overflow:hidden;}
-.header .logo{ width: 289px; height: 49px; margin-top: 25px;}
-.header .logo a{display: block; width: 100%; height: 100%; background: url(../images/cart_logo.png) no-repeat;}
-.header .logo a h1{text-indent: -1000px;}
+.header{
+    width:980px; 
+    margin:0 auto; 
+    overflow:hidden;
+}
+
+.header .logo{ 
+    width: 289px; 
+    height: 49px; 
+    margin-top: 25px;
+}
+
+.header .logo a{
+    display: block; 
+    width: 100%; 
+    height: 100%; 
+    background: url(../images/cart_logo.png) no-repeat;
+}
+
+.header .logo a h1{
+    text-indent: -1000px;
+}
 
 
 /*订单状态栏*/
@@ -44,14 +63,107 @@
 .statebar ul .active{ background: url(..//images/side_bar.png) no-repeat; color:#fff; }
 .statebar ul .active i{color:#f35305;}
 
-/*购物车内容*/
-.order_table{
-    clear:both;
-    width:980px; 
-    margin:20px auto 0;
+/*收货地址*/
+.address{
+    width: 980px;
+    margin: 15px auto 0;
 }
 
-.order_table_th{
+.address .address_title{
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+}
+
+.address .address_title h3{
+    float: left;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.address .address_title a{
+    float: right;
+    color: #f35305;
+}
+
+.address .address_title a:hover{
+    text-decoration: underline;
+}
+
+.address .address_list{
+    clear: both;
+    width: 100%;
+}
+
+.address_list .item{
+    width: 939px;
+    height: 100px;
+    margin: 20px auto 0;
+    overflow: hidden;
+    background: #f0f0f0;
+}
+
+.address_list .item_inner{
+    position: relative;
+    height: 70px;
+    margin: 15px;
+}
+
+.address_list .item_inner input{
+    position: absolute;
+    top:50%;
+    left: 0;
+    margin-top: -6px;
+}
+
+.address_list .item_inner .address_info{
+    display: inline-block;
+    margin-left: 30px;
+}
+
+.address_list .item_inner .address_info li em{
+    font-style: normal;
+    margin-left: 5px;
+}
+
+.address_list .item_inner .address_info li{
+    line-height: 22px;
+}
+
+.address_list .item_inner .address_edit{
+    float: right;
+    line-height: 70px;
+}
+
+.address .address_add{
+    width: 100%;
+    height: 50px;
+    font-size: 14px;
+    line-height: 50px;
+    text-indent: 20px;
+}
+
+.address .address_add a{
+    color: #f35305;
+}
+
+
+/*确认订单*/
+.order_confirm{
+    clear:both;
+    width:980px; 
+    margin:20px auto 70px;
+    overflow: hidden;
+}
+
+.order_confirm h3{
+    height: 45px;
+    line-height: 45px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.order_info{
     width:978px; 
     height:48px;
     border:1px solid #e6e4e3;
@@ -61,127 +173,122 @@
     position:relative;
 }
 
-.order_table_th div{
+.order_header div{
     float: left; 
     height:100%; 
     text-align:center;
 }
 
-.order_table_th .th_info{
-    width: 390px;
+.order_header .hd_info{
+    width: 450px;
     text-align: left;
     text-indent: 40px;
 }
 
-.order_table_th .th_price{
-    width: 147px;
+.order_header .hd_price{
+    width: 155px;
 }
 
-.order_table_th .th_amount{
-    width: 105px;
+.order_header .hd_amount{
+    width: 113px;
 }
 
-.order_table_th .th_sum{
-    width: 110px;
+.order_header .hd_sum{
+    width: 120px;
 }
 
-.order_table_th .th_fare{
-    width: 115px;
+.order_header .hd_fare{
+    width: 130px;
 }
 
-.order_table_th .th_handle{
-    width: 110px;
-}
-
-.order_table_tb{
+.order_body{
+    clear: both;
     border:1px solid #e6e4e3;
     border-top:none; 
 }
 
-.order_table_tb .order_table_tr{ 
+.order_body .order_body_tr{ 
     width:978px; 
     height:110px; 
     border-top:1px solid #e6e4e3;
 }
 
-.order_table_tb .order_table_tr div{
+.order_body .order_body_tr div{
     float: left;
 }
 
-.order_table_tr .item{
+.order_body_tr .item{
     height: 110px;
     text-align: center;
     line-height: 110px;
 }
 
-.order_table_tr .tr_info{
-    width:390px;  
+.order_body_tr .tr_info{
+    width: 450px;
     overflow:hidden;
 }
 
-.order_table_tr .tr_info .tr_info_img{ 
+.order_body_tr .tr_info .tr_info_img{ 
     width: 70px; 
     height: 70px; 
     margin: 20px;
     overflow: hidden;
     border: 1px solid #e6e4e3; 
 }
-.order_table_tr .tr_info .tr_info_msg{
+
+.order_body_tr .tr_info .tr_info_msg{
     width: 190px;
     margin-top: 37px;
     font-size: 14px;
     text-align: left;
     line-height: 16px;
 }
-.order_table_tr .tr_info .tr_info_img img{
+.order_body_tr tr_info .tr_info_img img{
     display: block;
     width: 100%;
     height: 100%;
 }
 
-.order_table_tr .tr_price{
-    width: 147px;
+.order_body_tr .tr_price{
+    width: 155px;
 }
 
-.order_table_tr .tr_amount{
-    width: 105px;
+.order_body_tr .tr_amount{
+    width: 113px;
 }
 
-.order_table_tr .tr_sum{
-    width: 110px;
+.order_body_tr .tr_sum{
+    width: 120px;
 }
 
-.order_table_tr .tr_fare{
-    width: 115px;
+.order_body_tr .tr_fare{
+    width: 130px;
 }
 
-.order_table_tr .tr_dell{
-    width: 110px;
-}
 
 /*结算栏*/
-.order_table_ft{
+.order_footer{
    clear: both;
 }
 
-.ft_total{
+.order_footer .ft_total{
     height: 66px;
     font-size: 16px;
     line-height: 66px;
     text-align: right;
 }
 
-.ft_total strong{
+.order_footer .ft_total strong{
     font-size: 22px;
     color: #f35305;
     font-weight: normal;
 }
 
-.ft_btn{
+.order_footer .ft_btn{
     float: right;
 }
 
-.ft_btn a{
+.order_footer .ft_btn a{
     display: inline-block;
     width: 114px;
     height: 38px;
@@ -191,186 +298,11 @@
     color: #fff;
     border-radius: 3px;
 }
-.keep_shopping{
-    background: #f35305;
-}
 
-.pay{
+.gotopay{
     background: #fd5115;
     margin-left: 15px;
 }
-
-
-/*promo*/
-.promo{
-    position: relative; 
-    overflow: hidden;
-}
-
-.promo .promo-main{
-    position: absolute; 
-    top: 0; 
-    left: 0;
-}
-
-.promo .promo-main .promo-panel{
-    float: left;
-}
-
-.promo .promo-main .promo-panel img{ 
-    max-width: 100%; 
-    max-width: 100%;
-}
-
-.promo .promo-extra .promo-nav{
-    position: absolute; 
-    z-index: 10; 
-    bottom: 15px; 
-    left:50%; 
-    margin-left: -38px; 
-    height: 13px; 
-    text-align: center; 
-    font-size: 0;
-}
-
-.promo .promo-extra .promo-nav .promo-item{
-    display: inline-block; 
-    width: 13px; 
-    height: 13px; 
-    margin: 0 3px; 
-    background: #B7B7B7;
-    border-radius: 50%; 
-    cursor: pointer;
-}
-
-.promo .promo-extra .promo-nav .promo-select{
-    background: #f35305; 
-}
-
-.promo .promo-extra .promo-page{
-    display: none;
-}
-
-.promo .promo-extra .promo-page a{ 
-    position: absolute; 
-    top: 50%;
-    margin-top: -30px; 
-    width: 30px; 
-    height: 60px;
-    line-height: 60px;
-    text-align: center; 
-    background-color: rgba(0,0,0,.3); 
-    color: #fff;
-    font-size: 22px; 
-    font-family: "simsun";
-    font-weight: bold;
-    transition: all  0.3s;
-}
-
-.promo .promo-extra .promo-page a:hover{
-    background-color: rgba(0,0,0,.5);
-}
-
-.promo .promo-extra .promo-prev{
-    left: 0; 
-}
-
-.promo .promo-extra .promo-next{
-    right: 0;
-}
-
-.guess_like{
-    clear:both; 
-    width:980px; 
-    height:312px; 
-    margin: 17px auto 0; 
-    color:#556270; 
-    font-size:14px;
-    overflow: hidden;
-}
-
-.guess_like h4{
-    width: 100%;
-    height: 35px;
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 35px;
-    text-indent: 10px;
-    background: #f8f8f8;
-}
-
-.guess_like h2 a{
-    color: #555;
-}
-.guess_like .wrap{
-    width:980px; 
-    height:215px; 
-}
-
-.guess_like .wrap .guess_item{ 
-    float:left; 
-    width:228px; 
-    margin:10px 20px 0 0;
-    border:1px solid #ececec; 
-    overflow:hidden;
-}
-
-.guess_like .wrap .item_last{
-    margin-right: 0;
-}
-
-.guess_like .wrap .guess_item dt{
-    width:228px;
-    height: 120px;
-    margin-bottom: 15px;
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-}
-
-.guess_like .wrap .guess_item img{
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.guess_like .wrap .guess_item a:hover img{
-    -webkit-transition: opacity 0.2s; 
-    -moz-transition: opacity 0.2s;
-    -ms-transition: opacity 0.2s;
-    -o-transition: opacity 0.2s;
-    transition: opacity 0.2s; 
-    opacity: 0.8; 
-    filter: alpha(opacity=80);
-}
-
-.guess_like .wrap .guess_item a:hover dd{
-    -webkit-transition: color 0.2s; 
-    -moz-transition: color 0.2s;
-    -ms-transition: color 0.2s;
-    -o-transition: color 0.2s;
-    transition: color 0.2s; 
-    color: #333;
-}
-
-.guess_like .wrap .guess_item dd{ 
-    width: 176px;
-    margin: 5px auto;
-    font-size: 12px;
-    line-height: 16px;
-    color: #525252;
-}
-
-.guess_like .wrap .guess_item dd .guess_item_price{
-    margin-right: 10px;
-    font-size: 16px;
-    line-height: 22px;
-    color: #f35305;
-}
-
-.guess_item_sales{
-    font-size: 12px;
-}
-
 
 
 /*安全保障*/
